// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyphenateLimitBefore renders 0 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: 0;
  -moz-hyphenate-limit-before: 0;
  -ms-hyphenate-limit-before: 0;
  hyphenate-limit-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 0;
  -moz-hyphenate-limit-before: 0;
  -ms-hyphenate-limit-before: 0;
  hyphenate-limit-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 0;
  -moz-hyphenate-limit-before: 0;
  -ms-hyphenate-limit-before: 0;
  hyphenate-limit-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 0;
  -moz-hyphenate-limit-before: 0;
  -ms-hyphenate-limit-before: 0;
  hyphenate-limit-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders function 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: hasnot;
  -moz-hyphenate-limit-before: hasnot;
  -ms-hyphenate-limit-before: hasnot;
  hyphenate-limit-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: has;
  -moz-hyphenate-limit-before: has;
  -ms-hyphenate-limit-before: has;
  hyphenate-limit-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: hasnot;
  -moz-hyphenate-limit-before: hasnot;
  -ms-hyphenate-limit-before: hasnot;
  hyphenate-limit-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: has;
  -moz-hyphenate-limit-before: has;
  -ms-hyphenate-limit-before: has;
  hyphenate-limit-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: invalid.path.1;
  -moz-hyphenate-limit-before: invalid.path.1;
  -ms-hyphenate-limit-before: invalid.path.1;
  hyphenate-limit-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: invalid.path.1;
  -moz-hyphenate-limit-before: invalid.path.1;
  -ms-hyphenate-limit-before: invalid.path.1;
  hyphenate-limit-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: invalid.path.1;
  -moz-hyphenate-limit-before: invalid.path.1;
  -ms-hyphenate-limit-before: invalid.path.1;
  hyphenate-limit-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: invalid.path.1;
  -moz-hyphenate-limit-before: invalid.path.1;
  -ms-hyphenate-limit-before: invalid.path.1;
  hyphenate-limit-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders negative number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: -54881;
  -moz-hyphenate-limit-before: -54881;
  -ms-hyphenate-limit-before: -54881;
  hyphenate-limit-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: -54881;
  -moz-hyphenate-limit-before: -54881;
  -ms-hyphenate-limit-before: -54881;
  hyphenate-limit-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: -42365;
  -moz-hyphenate-limit-before: -42365;
  -ms-hyphenate-limit-before: -42365;
  hyphenate-limit-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: -42365;
  -moz-hyphenate-limit-before: -42365;
  -ms-hyphenate-limit-before: -42365;
  hyphenate-limit-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: July;
    -moz-hyphenate-limit-before: July;
    -ms-hyphenate-limit-before: July;
    hyphenate-limit-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: September;
    -moz-hyphenate-limit-before: September;
    -ms-hyphenate-limit-before: September;
    hyphenate-limit-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: July;
    -moz-hyphenate-limit-before: July;
    -ms-hyphenate-limit-before: July;
    hyphenate-limit-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: September;
    -moz-hyphenate-limit-before: September;
    -ms-hyphenate-limit-before: September;
    hyphenate-limit-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: May;
    -moz-hyphenate-limit-before: May;
    -ms-hyphenate-limit-before: May;
    hyphenate-limit-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: June;
    -moz-hyphenate-limit-before: June;
    -ms-hyphenate-limit-before: June;
    hyphenate-limit-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: April;
    -moz-hyphenate-limit-before: April;
    -ms-hyphenate-limit-before: April;
    hyphenate-limit-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: May;
    -moz-hyphenate-limit-before: May;
    -ms-hyphenate-limit-before: May;
    hyphenate-limit-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: June;
    -moz-hyphenate-limit-before: June;
    -ms-hyphenate-limit-before: June;
    hyphenate-limit-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-before: April;
    -moz-hyphenate-limit-before: April;
    -ms-hyphenate-limit-before: April;
    hyphenate-limit-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-hyphenate-limit-before: July;
    -moz-hyphenate-limit-before: July;
    -ms-hyphenate-limit-before: July;
    hyphenate-limit-before: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-before: September;
    -moz-hyphenate-limit-before: September;
    -ms-hyphenate-limit-before: September;
    hyphenate-limit-before: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-hyphenate-limit-before: July;
    -moz-hyphenate-limit-before: July;
    -ms-hyphenate-limit-before: July;
    hyphenate-limit-before: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-before: September;
    -moz-hyphenate-limit-before: September;
    -ms-hyphenate-limit-before: September;
    hyphenate-limit-before: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: November;
    -moz-hyphenate-limit-before: November;
    -ms-hyphenate-limit-before: November;
    hyphenate-limit-before: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-before: August;
    -moz-hyphenate-limit-before: August;
    -ms-hyphenate-limit-before: August;
    hyphenate-limit-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-before: January;
    -moz-hyphenate-limit-before: January;
    -ms-hyphenate-limit-before: January;
    hyphenate-limit-before: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: December;
    -moz-hyphenate-limit-before: December;
    -ms-hyphenate-limit-before: December;
    hyphenate-limit-before: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-before: April;
    -moz-hyphenate-limit-before: April;
    -ms-hyphenate-limit-before: April;
    hyphenate-limit-before: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: May;
    -moz-hyphenate-limit-before: May;
    -ms-hyphenate-limit-before: May;
    hyphenate-limit-before: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-before: June;
    -moz-hyphenate-limit-before: June;
    -ms-hyphenate-limit-before: June;
    hyphenate-limit-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-before: January;
    -moz-hyphenate-limit-before: January;
    -ms-hyphenate-limit-before: January;
    hyphenate-limit-before: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: December;
    -moz-hyphenate-limit-before: December;
    -ms-hyphenate-limit-before: December;
    hyphenate-limit-before: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-before: April;
    -moz-hyphenate-limit-before: April;
    -ms-hyphenate-limit-before: April;
    hyphenate-limit-before: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-before: May;
    -moz-hyphenate-limit-before: May;
    -ms-hyphenate-limit-before: May;
    hyphenate-limit-before: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-before: June;
    -moz-hyphenate-limit-before: June;
    -ms-hyphenate-limit-before: June;
    hyphenate-limit-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: 54881;
  -moz-hyphenate-limit-before: 54881;
  -ms-hyphenate-limit-before: 54881;
  hyphenate-limit-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 54881;
  -moz-hyphenate-limit-before: 54881;
  -ms-hyphenate-limit-before: 54881;
  hyphenate-limit-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 42365;
  -moz-hyphenate-limit-before: 42365;
  -ms-hyphenate-limit-before: 42365;
  hyphenate-limit-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: 42365;
  -moz-hyphenate-limit-before: 42365;
  -ms-hyphenate-limit-before: 42365;
  hyphenate-limit-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders string 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: July;
  -moz-hyphenate-limit-before: July;
  -ms-hyphenate-limit-before: July;
  hyphenate-limit-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: July;
  -moz-hyphenate-limit-before: July;
  -ms-hyphenate-limit-before: July;
  hyphenate-limit-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: June;
  -moz-hyphenate-limit-before: June;
  -ms-hyphenate-limit-before: June;
  hyphenate-limit-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: June;
  -moz-hyphenate-limit-before: June;
  -ms-hyphenate-limit-before: June;
  hyphenate-limit-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitBefore renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-before: DarkSlateBlue;
  -moz-hyphenate-limit-before: DarkSlateBlue;
  -ms-hyphenate-limit-before: DarkSlateBlue;
  hyphenate-limit-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: DarkSlateBlue;
  -moz-hyphenate-limit-before: DarkSlateBlue;
  -ms-hyphenate-limit-before: DarkSlateBlue;
  hyphenate-limit-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: DarkSlateBlue;
  -moz-hyphenate-limit-before: DarkSlateBlue;
  -ms-hyphenate-limit-before: DarkSlateBlue;
  hyphenate-limit-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-before: DarkSlateBlue;
  -moz-hyphenate-limit-before: DarkSlateBlue;
  -ms-hyphenate-limit-before: DarkSlateBlue;
  hyphenate-limit-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
